<resources>
    <string name="app_name">TimeKeeper</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="watch_background">Watch Background</string>
    <string name="hour_pointer">Hour Pointer</string>
    <string name="minute_pointer">Minute Pointer</string>
    <string name="second_pointer">Second Pointer</string>
    <string name="watch_center">Watch Center</string>
    <string name="config_close">閉じる</string>
    <string name="config_retention">保存</string>
    <string name="timepicker_close">キャンセル</string>
    <string name="timepicker_ok">OK</string>
    <string name="text_time">時間</string>
    <string name="text_repetition">繰り返し</string>
    <string name="no_repeat">No Repeat</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="alarm_text">アラームテキスト</string>
    <string name="alarm_sound">アラーム音</string>
    <string name="alarm_volume">アラームの音量</string>
    <string name="snooze">スヌーズ設定</string>
    <string name="vibration">バイブレーション</string>
    <string name="non_option">設定しない</string>
    <string name="minutes_30">30分</string>
    <string name="minutes_25">25分</string>
    <string name="minutes_15">15分</string>
    <string name="minutes_20">20分</string>
    <string name="minutes_10">10分</string>
    <string name="minutes_5">5分</string>
</resources>
