<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                android:id="@+id/sun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sun" />

                <TextView
                    android:id="@+id/mon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mon" />

                <TextView
                    android:id="@+id/tue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tue" />

                <TextView
                    android:id="@+id/wed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wed" />

                <TextView
                    android:id="@+id/thu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thu" />

                <TextView
                    android:id="@+id/fri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fri" />

                <TextView
                    android:id="@+id/sat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sat" />

            </LinearLayout>

        </LinearLayout>

        <Switch
            android:id="@+id/switch1"
            android:layout_gravity="center_vertical|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
</android.support.constraint.ConstraintLayout>