<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp"
    tools:context="mabo_com.timekeeper.Repeat_option">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/checkBox_sun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/sun" />

            <CheckBox
                android:id="@+id/checkBox_mon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/mon" />

            <CheckBox
                android:id="@+id/checkBox_tue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/tue" />

            <CheckBox
                android:id="@+id/checkBox_wed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/wed" />

            <CheckBox
                android:id="@+id/checkBox_thu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/thu" />

            <CheckBox
                android:id="@+id/checkBox_fri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/fri" />

            <CheckBox
                android:id="@+id/checkBox_sat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/sat" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="@dimen/list_side_padding"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="close_repeat_option"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/timepicker_close"
                    android:textAlignment="center"
                    android:textColor="#202070"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="ok_repeat_option"
                    android:paddingBottom="10dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/timepicker_ok"
                    android:textAlignment="center"
                    android:textColor="#202070"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

</android.support.constraint.ConstraintLayout>
