<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp"
    tools:context="mabo_com.timekeeper.snooze_option">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <RadioGroup android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/RadioGroup_snooze">

            <RadioButton
                android:id="@+id/radioButton_non"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/non_snooze" />

            <RadioButton
                android:id="@+id/radioButton_5minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/minutes_5" />

            <RadioButton
                android:id="@+id/radioButton_10minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/minutes_10" />

            <RadioButton
                android:id="@+id/radioButton_15minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/minutes_15" />

            <RadioButton
                android:id="@+id/radioButton_20minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/minutes_20" />

            <RadioButton
                android:id="@+id/radioButton_25minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/minutes_25" />

            <RadioButton
                android:id="@+id/radioButton_30minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_padding"
                android:layout_marginBottom="@dimen/list_padding"
                android:layout_marginStart="@dimen/list_side_padding"
                android:text="@string/minutes_30" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="@dimen/list_side_padding"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="close_snooze_option"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/timepicker_close"
                android:textAlignment="center"
                android:textColor="#202070"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:onClick="ok_snooze_option"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/timepicker_ok"
                android:textAlignment="center"
                android:textColor="#202070"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
