<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:layout_height="230dp">

            <ImageView
                android:id="@+id/watch_background"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/watch_background"
                android:contentDescription="@string/watch_background" />

            <TextView
                android:id="@+id/TimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:textColor="#bbffffff"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/DateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="40dp"
                android:layout_gravity="center"
                android:textColor="#bbffffff"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/secondPointer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/secondpointer"
                android:contentDescription="@string/second_pointer" />

            <ImageView
                android:id="@+id/minutePointer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/minutepointer"
                android:contentDescription="@string/minute_pointer" />

            <ImageView
                android:id="@+id/hourPointer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/hourpointer"
                android:contentDescription="@string/hour_pointer" />

            <ImageView
                android:id="@+id/watch_center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/watch_center"
                android:contentDescription="@string/watch_center" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/alarm_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </ListView>

            <android.support.design.widget.FloatingActionButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@android:drawable/ic_input_add"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="add_alarm"/>

        </FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>